--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,8 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-     
+    <link href="https://fonts.googleapis.com/css2?family=Lora:wght@400&display=swap" rel="stylesheet">
+
     <title>GlamStone Official Website </title>
   </head>
   <body>
